[package]
name = "cdm_paint"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 2
debug = false
lto = "fat"

[profile.release]
opt-level = 2
debug = false
lto = "fat"

[dependencies]
bitmask-enum = "2.2.5"
embedded-alloc = "0.7.0"
critical-section = { version = "1.2.0", features = ["restore-state-u16"] }
